# voice-slicer

./: .actrc  .gitattributes  .gitignore  CLAUDE.md  README.md  edit.py  export_edit.py  main.py  pyproject.toml  run.bat  split.py  transcribe.py  voice_slicer.bat  voice_slicer.py
.github/workflows/: release.yml
.serena/: project.yml
docs/: GUI.md  Transcription.md  data_format.md  edit.md  export_behavior.md  index_specification.md  split.md  tools.md  transcribe.md
gui/: app.py
gui/static/: app.js  styles.css
gui/templates/: index.html
src/: __init__.py  cli.py  cuesheet.py  json_loader.py  splitter.py  transcribe.py  utils.py
